About section complete

--- a/src/app/about-section/about-section.component.html
+++ b/src/app/about-section/about-section.component.html
@@ -1,1 +1,12 @@
-<p>about-section works!</p>
+<h1 class="name">SALMAN <span class="arefin">AREFIN</span> </h1>
+<p class="contact">465/28/B Bandhunibash, Rampura, Dhaka - <span class="mail">arefinsalman86@gmail.com</span></p>
+<p></p>
+
+<p class="bio">
+    Computer Science Engineer with good programming language and communication skills. Experienced on project development in various platforms. Interested in Software-Development, Web-Development, Game-Development and Problem Solving.
+</p>
+
+<a href="https://github.com/salman-arefin74"><i class="fab fa-github"></i></a>
+<a href="https://www.linkedin.com/salman74"><i class="fab fa-linkedin"></i></a>
+<a href="https://www.facebook.com/salmanarefin74"><i class="fab fa-facebook-square"></i></a>
+ 
