Experience section done

--- a/src/app/experience-section/experience-section.component.html
+++ b/src/app/experience-section/experience-section.component.html
@@ -1,1 +1,25 @@
-<p>experience-section works!</p>
+<h1>Experience</h1>
+<h3>Computer Ease Limited</h3>
+<p class="timeline">August 2019 - Present</p>
+<p class="description">Creating Payroll Management System for various clients on Desktop, Web and Mobile
+    platforms using C#, ASP.NET, ASP.NET Core, Angular, Xamarin, JavaScript, jQuery , Bootstrap
+    and MySQL for Clients like Banglalink, BAT, Square, EchoTex, Navana, Wartsila, Enroute,
+    Bikroy and many others</p>
+
+    <h4>Web Applications:</h4>
+    <ul>
+        <li>Developing new applications and providing support to already developed
+            applications using Angular, ASP.NET, ASP.NET Core, C#, MySQL and Azure AD</li>
+        <li>Converting previously developed ASP.NET project using .NET Core and Angular</li>
+    </ul>
+
+    <h4>Mobile Applications:</h4>
+    <ul>
+        <li>Developing mobile application using Xamarin forms and Web (REST) Api</li>
+    </ul>
+
+    <h4>Desktop Applications:</h4>
+    <ul>
+        <li>Developing new modules into previously developed application using Microsoft
+            WinForms and C</li>
+    </ul>
