--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
 
 <div class="col-md-8">
   <!-- <router-outlet></router-outlet> -->
-  <app-about-section></app-about-section>
+  <app-experience-section></app-experience-section>
 </div>
