Skills section done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 </div>
 
 <div class="col-md-8">
-  <!-- <router-outlet></router-outlet> -->
-  <app-experience-section></app-experience-section>
+  <router-outlet></router-outlet>
+  <!-- <app-skills-section></app-skills-section> -->
 </div>
