--- a/src/app/experience-section/experience-section.component.html
+++ b/src/app/experience-section/experience-section.component.html
@@ -1,6 +1,6 @@
 <h1>Experience</h1>
 <h3>Computer Ease Limited</h3>
-<p class="timeline">August 2019 - Present</p>
+<p>Junior Programmer Analyst ( <span  class="timeline">August 2019 - Present</span>)</p>
 <p class="description">Creating Payroll Management System for various clients on Desktop, Web and Mobile
     platforms using C#, ASP.NET, ASP.NET Core, Angular, Xamarin, JavaScript, jQuery , Bootstrap
     and MySQL for Clients like Banglalink, BAT, Square, EchoTex, Navana, Wartsila, Enroute,
