--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,12 +3,12 @@
   <img src="../../assets/salman.jpg" alt="">
 
   <div class="menulist">
-    <a href="#">ABOUT</a>
-    <a href="#">EXPERIENCE</a>
-    <a href="#">EDUCATION</a>
-    <a href="#">SKILLS</a>
-    <a href="#">PROJECTS</a>
-    <a href="#">BLOG</a>
+    <li routerLinkActive="active"><a [routerLink]="['/about']" routerLinkActive="router-link-active">ABOUT</a></li>
+    <li routerLinkActive="active"><a [routerLink]="['/experience']" routerLinkActive="router-link-active">EXPERIENCE</a></li>
+    <li routerLinkActive="active"><a [routerLink]="['/education']" routerLinkActive="router-link-active">EDUCATION</a></li>
+    <li routerLinkActive="active"><a [routerLink]="['/skills']" routerLinkActive="router-link-active">SKILLS</a></li>
+    <li routerLinkActive="active"><a [routerLink]="['/projects']" routerLinkActive="router-link-active">PROJECTS</a></li>
+    <li routerLinkActive="active"><a [routerLink]="['/blog']" routerLinkActive="router-link-active">BLOG</a></li>
   </div>
   
 </div>
