--- a/src/app/education-section/education-section.component.html
+++ b/src/app/education-section/education-section.component.html
@@ -1,1 +1,15 @@
-<p>education-section works!</p>
+<h1>Education</h1>
+<h2>B.Sc.</h2>
+<h3>Ahsanullah University of Science & Technology</h3>
+<p class="timeline">May 2015 - June 2019</p>
+<p class="cgpa">CGPA: 3.34</p>
+
+<h2>HSC</h2>
+<h3>Notre Dame College</h3>
+<p class="timeline">2014</p>
+<p class="cgpa">GPA: 5.00</p>
+
+<h2>SSC</h2>
+<h3>Scholars School & College</h3>
+<p class="timeline">2012</p>
+<p class="cgpa">GPA: 5.00</p>
