--- a/src/app/experience-section/experience-section.component.html
+++ b/src/app/experience-section/experience-section.component.html
@@ -4,7 +4,7 @@
 <p class="description">Creating Payroll Management System for various clients on Desktop, Web and Mobile
     platforms using C#, ASP.NET, ASP.NET Core, Angular, Xamarin, JavaScript, jQuery , Bootstrap
     and MySQL for Clients like Banglalink, BAT, Square, EchoTex, Navana, Wartsila, Enroute,
-    Bikroy and many others</p>
+    Bikroy and many others.</p>
 
     <h4>Web Applications:</h4>
     <ul>
@@ -21,5 +21,5 @@
     <h4>Desktop Applications:</h4>
     <ul>
         <li>Developing new modules into previously developed application using Microsoft
-            WinForms and C</li>
+            WinForms and C#</li>
     </ul>
