--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -7,8 +7,8 @@
     left: 0;
     overflow-x: hidden;
     padding-top: 20px;
-    width: 25%;
     text-align: center;
+    
 }
 
 .menu a {
@@ -41,4 +41,7 @@
       border-width: 6px;
       border-color: #CA7D60;
       margin-top: 185px;
+      text-align: center;
+      margin-left: 50px;
+      margin-right: 50px;
   }
