--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
-<div class="col-md-4">
-  <app-menu></app-menu>
-</div>
+<div class="container">
+  <div class="col-md-3 col-lg-3 col-xl-3 col-sm-12">
+    <app-menu></app-menu>
+  </div>
+  
+  <div class="col-md-1 col-lg-1 col-xl-1">
 
-<div class="col-md-8">
-  <router-outlet></router-outlet>
-  <!-- <app-skills-section></app-skills-section> -->
+  </div>
+
+  <div class="col-md-8 col-lg-8 col-xl-8 col-sm-12">
+    <router-outlet></router-outlet>
+  </div>
 </div>
