--- a/src/app/professional-projects-section/professional-projects-section.component.html
+++ b/src/app/professional-projects-section/professional-projects-section.component.html
@@ -1,1 +1,161 @@
-<p>professional-projects-section works!</p>
+
+<h1>Projects</h1>
+<h3 class="prof">Professional Projects</h3>
+
+<div class="row">
+    <div class="col-md-6 wrapper">
+        <div class="card">
+            <div class="card-header">
+                <h4>Human Resource and Payroll Management System</h4>
+                <h5>Aug 2019 – Present</h5>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>Developed new modules and provided support to already developed modules in different HR Payroll Management systems.</li>
+                    <li>Noteworthy modules of this projects are Payroll management, Attendance system, Leave Management, Employee Self Service etc.</li>
+                    <li>Developed this projects in all Desktop, Web and Mobile platform.</li>
+                    <li>Technologies used are mainly C#, ASP.NET, Angular, Xamarin, MySQL</li>
+                    <li>Clients : Banglalink, BAT, Bikroy.com, Coats BD, EchoTex LTD, Enroute Outsource, SKF, Navana, Square Group, Anwar Group and Wartsila</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-md-6 wrapper">
+        <div class="card h-100">
+            <div class="card-header">
+                <h4>Canteen Management System</h4>
+                <h5>Jan 2020 – Present</h5>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>Developed most of the core modules and assisted co-developers to code.</li>
+                    <li>Noteworthy modules of this project are Summary view of Expected and Consumed meal, User Management, Guest Meal Booking and Approval, Various reports.</li>
+                    <li>Technologies used are mainly C#, ASP.NET Web API, Angular</li>
+                    <li>Client : BAT</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6 wrapper">
+        <div class="card h-100">
+            <div class="card-header">
+                <h4>CEL HRM</h4>
+                <h5>Aug 2020 – Present</h5>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>Developing Employee profile, Attendance and Authentication modules.</li>
+                    <li>Working on both front end (Angular) and back end (REST API) </li>
+                    <li>Guiding junior developers on developing other modules.</li>
+                    <li>Technologies used : Angular, REST API</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-md-6 wrapper">
+        <div class="card">
+            <div class="card-header">
+                <h4>POS Restaurant</h4>
+                <h5>Nov 2020 – Present</h5>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>Developed some core modules with the guideline of senior developer.</li>
+                    <li>Noteworthy modules of this project are User Management, Menu Management, Order Management, Payment Management, Table Reservation, Reports</li>
+                    <li>Technologies used : C#, WPF, ASP.NET Core Web API, Entity Framework</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h3 class="thesis">Thesis</h3>
+<div class="row">
+    <div class="col-md-6 wrapper">
+        <div class="card h-100">
+            <div class="card-header">
+                <h4>Feature Selection Based Network Intru sion Detection Using
+                    Data mining Classification Algorithms (03/2018</h4>
+                <p>March 2018 - June 2019</p>
+            </div>
+            <div class="card-body">
+                <h5>Supervisor: Ms. Syeda Shabnam Hasan, Assistant Professor, AUST</h5>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h3 class="pers">Personal Projects</h3>
+
+<div class="row">
+    <div class="col-md-6 wrapper">
+        <div class="card h-100">
+            <div class="card-header">
+                <h4>Food & Chill</h4>
+                <a href="https://bit.ly/2nHkGCo">Github Link</a>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>Website</li>
+                    <li>Technology: C#, .NET, JavaScri pt, MySQL</li>
+                    <li>Tools: Microsoft Visual Studio</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-md-6 wrapper">
+        <div class="card">
+            <div class="card-header">
+                <h4>World-o-Meter</h4>
+                <a href="https://bit.ly/3cDhFbD">Github Link</a>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>Single Page Application</li>
+                    <li>Technology: Angular 8</li>
+                    <li>Tools: Visual Studio Code</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6 wrapper">
+        <div class="card h-100">
+            <div class="card-header">
+                <h4>Budget Calculator</h4>
+                <a href="https://bit.ly/2KLMSj4">Github Link</a>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>Single Page Appli cation</li>
+                    <li>Technology: Angular 8</li>
+                    <li>Tools: Visual Studio Code</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-md-6 wrapper">
+        <div class="card">
+            <div class="card-header">
+                <h4>CartMart</h4>
+                <a href="https://bit.ly/2nE6z0C">Github Link</a>
+            </div>
+            <div class="card-body">
+                <ul>
+                    <li>Website</li>
+                    <li>Technology: HTML, CSS, PHP, MySQL</li>
+                    <li>Tools: Sublime Text, XAMPP</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
