--- a/src/app/skills-section/skills-section.component.css
+++ b/src/app/skills-section/skills-section.component.css
@@ -4,19 +4,23 @@ h1{
     font-size: 42px;
     font-weight: 700;
     text-transform: uppercase;
-    margin-top: 100px;
+    margin-top: 60px;
     margin-bottom: 50px;
 }
 
-.wrapper{
-    margin-left: -15px;
-    width: 40%;
-    font-family: 'Roboto', sans-serif;
+.card-header{
+    font-family: 'Saira Extra Condensed', sans-serif;
+    font-size: 22px;
 }
 
-.wrapper2{
-    width: 40%;
-    font-family: 'Roboto', sans-serif;
+.wrapper{
+    
+    margin-bottom: 35px;
+}
+
+.card-body{
+    font-family: 'Montserrat', sans-serif;
+    
 }
 
 .skill {
@@ -129,3 +133,14 @@ h1{
     width: 80%
 }
 
+.skillsvn{
+    width: 90%;
+}
+
+.skillado{
+    width: 80%;
+}
+
+.skillentity{
+    width: 70%;
+}
