--- a/src/app/skills-section/skills-section.component.html
+++ b/src/app/skills-section/skills-section.component.html
@@ -1,103 +1,167 @@
-<h1>Skills</h1>
-<div class=" col-md-6 wrapper">
-        <div class="skill">
-            <p>C#</p>
-            <div class="skill-bar skill1">
-                <span class="skill-count">70%</span>
+
+    <h1>Skills</h1>
+<div class="row">
+    <div class="col-md-6 wrapper">
+        <div class="card">
+            <div class="card-header">
+                Language
             </div>
-        </div>
-        <div class="skill">
-            <p>.NET</p>
-            <div class="skill-bar skill2">
-                 <span class="skill-count">70%</span>
-            </div>
-        </div>
-        <div class="skill">
-            <p>.NET CORE</p>
-            <div class="skill-bar skill3">
-                <span class="skill-count">60%</span>
-            </div>
-        </div>
-        <div class="skill">
-            <p>Angular</p>
-            <div class="skill-bar skill4">
-                <span class="skill-count">60%</span>
-            </div>
-        </div>
-        <div class="skill">
-            <p>Xamarin</p>
-            <div class="skill-bar skill5">
-                <span class="skill-count">70%</span>
-            </div>
-        </div>
-        <div class="skill">
-            <p>JavaScript</p>
-            <div class="skill-bar skill6">
-                <span class="skill-count">60%</span>
-            </div>
-        </div>
-        <div class="skill">
-            <p>Java</p>
-            <div class="skill-bar skill7">
-                <span class="skill-count">65%</span>
-            </div>
-        </div>
-        <div class="skill">
-            <p>C++</p>
-            <div class="skill-bar skill8">
-                <span class="skill-count">65%</span>
+            <div class="card-body">
+                <div class="skill">
+                    <p>C#</p>
+                    <div class="skill-bar skill1">
+                        <span class="skill-count">70%</span>
+                    </div>
+                </div> 
+                <div class="skill">
+                    <p>JavaScript</p>
+                    <div class="skill-bar skill6">
+                        <span class="skill-count">60%</span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Java</p>
+                    <div class="skill-bar skill7">
+                        <span class="skill-count">65%</span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>C++</p>
+                    <div class="skill-bar skill8">
+                        <span class="skill-count">65%</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     
-    <div class=" col-md-6 wrapper2">
-        <div class="skill">
-            <p>Unity</p>
-            <div class="skill-bar skill9">
-                <span class="skill-count">60%</span>
+    <div class="col-md-6 wrapper">
+        <div class="card h-100">
+            <div class="card-header">
+                Framework
+            </div>
+            <div class="card-body">
+                <div class="skill">
+                    <p>.NET</p>
+                    <div class="skill-bar skill2">
+                         <span class="skill-count">70%</span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>.NET CORE</p>
+                    <div class="skill-bar skill3">
+                        <span class="skill-count">60%</span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Angular</p>
+                    <div class="skill-bar skill4">
+                        <span class="skill-count">60%</span>
+                    </div>
+                </div>
+                
             </div>
         </div>
-        <div class="skill">
-            <p>Wordpress</p>
-            <div class="skill-bar skill10">
-                 <span class="skill-count">60%</span>
+    </div>
+
+    
+</div>
+
+<div class="row">
+    <div class="col-md-6 wrapper">
+        <div class="card">
+            <div class="card-header">
+                Platform
+            </div>
+            <div class="card-body">
+                <div class="skill">
+                    <p>Xamarin</p>
+                    <div class="skill-bar skill5">
+                        <span class="skill-count">70%</span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Unity</p>
+                    <div class="skill-bar skill9">
+                        <span class="skill-count">60%</span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>Wordpress</p>
+                    <div class="skill-bar skill10">
+                         <span class="skill-count">60%</span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="skill">
-            <p>Entity Framework</p>
-            <div class="skill-bar skill11">
-                <span class="skill-count">60%</span>
+    </div>
+
+    <div class="col-md-6 wrapper">
+        <div class="card h-100">
+            <div class="card-header">
+                Database
+            </div>
+            <div class="card-body">
+                <div class="skill">
+                    <p>MySQL</p>
+                    <div class="skill-bar skill14">
+                        <span class="skill-count">75%</span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>PlSQL</p>
+                    <div class="skill-bar skill15">
+                        <span class="skill-count">60%</span>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="skill">
-            <p>HTML CSS</p>
-            <div class="skill-bar skill12">
-                <span class="skill-count">70%</span>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-6 wrapper">
+        <div class="card">
+            <div class="card-header">
+                ORM
             </div>
-        </div>
-        <div class="skill">
-            <p>Bootstrap</p>
-            <div class="skill-bar skill13">
-                <span class="skill-count">70%</span>
-            </div>
-        </div>
-        <div class="skill">
-            <p>MySQL</p>
-            <div class="skill-bar skill14">
-                <span class="skill-count">75%</span>
-            </div>
-        </div>
-        <div class="skill">
-            <p>PlSQL</p>
-            <div class="skill-bar skill15">
-                <span class="skill-count">60%</span>
-            </div>
-        </div>
-        <div class="skill">
-            <p>Git</p>
-            <div class="skill-bar skill16">
-                <span class="skill-count">70%</span>
+            <div class="card-body">
+                <div class="skill">
+                    <p>Entity Framework</p>
+                    <div class="skill-bar skillentity">
+                        <span class="skill-count">60%</span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>ADO.NET</p>
+                    <div class="skill-bar skillado">
+                        <span class="skill-count">70%</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     
+    <div class="col-md-6 wrapper">
+        <div class="card">
+            <div class="card-header">
+                Version Control
+            </div>
+            <div class="card-body">
+                <div class="skill">
+                    <p>Git</p>
+                    <div class="skill-bar skill16">
+                        <span class="skill-count">70%</span>
+                    </div>
+                </div>
+                <div class="skill">
+                    <p>SVN</p>
+                    <div class="skill-bar skillsvn">
+                        <span class="skill-count">80%</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
