--- a/src/app/education-section/education-section.component.html
+++ b/src/app/education-section/education-section.component.html
@@ -1,5 +1,8 @@
+<div class="container">
+    
 
-    <h1>Education</h1>
+
+<h1>Education</h1>
 <h2>B.Sc.</h2>
 <h3>Ahsanullah University of Science & Technology</h3>
 <p class="timeline">May 2015 - June 2019</p>
@@ -14,3 +17,4 @@
 <h3>Scholars School & College</h3>
 <p class="timeline">2012</p>
 <p class="cgpa">GPA: 5.00</p>
+</div>
