--- a/src/app/experience-section/experience-section.component.html
+++ b/src/app/experience-section/experience-section.component.html
@@ -1,4 +1,5 @@
-<h1>Experience</h1>
+<div class="container">
+    <h1>Experience</h1>
 <h3>Computer Ease Limited</h3>
 <p>Junior Programmer Analyst ( <span  class="timeline">August 2019 - Present</span>)</p>
 <p class="description">Creating Payroll Management System for various clients on Desktop, Web and Mobile
@@ -23,3 +24,4 @@
         <li>Developing new modules into previously developed application using Microsoft
             WinForms and C#</li>
     </ul>
+</div>
