--- a/src/app/about-section/about-section.component.html
+++ b/src/app/about-section/about-section.component.html
@@ -1,4 +1,5 @@
-<h1 class="name">SALMAN <span class="arefin">AREFIN</span> </h1>
+<div class="container">
+    <h1 class="name">SALMAN <span class="arefin">AREFIN</span> </h1>
 <p class="contact">465/28/B Bandhunibash, Rampura, Dhaka - <span class="mail">arefinsalman86@gmail.com</span></p>
 <p></p>
 
@@ -10,3 +11,4 @@
 <a href="https://www.linkedin.com/salman74"><i class="fab fa-linkedin"></i></a>
 <a href="https://www.facebook.com/salmanarefin74"><i class="fab fa-facebook-square"></i></a>
  
+</div>
