--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-<div class="container">
-  <div class="col-md-3 col-lg-3 col-xl-3 col-sm-12">
-    <app-menu></app-menu>
-  </div>
-  
-  <div class="col-md-1 col-lg-1 col-xl-1">
+<div class="row">
+  <div class="col-md-3">
+      <app-menu></app-menu>
+    </div>
 
-  </div>
-
-  <div class="col-md-8 col-lg-8 col-xl-8 col-sm-12">
+  <div class="col-md-9">
     <router-outlet></router-outlet>
   </div>
 </div>
