--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,11 +1,11 @@
 .menu{
     background: #BD5D38;
-    height: 100%;
-    position: fixed;
+    height: 1800px;
+    /* position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
-    overflow-x: hidden;
+    overflow-x: hidden; */
     padding-top: 20px;
     text-align: center;
     
@@ -44,4 +44,8 @@
       text-align: center;
       margin-left: 50px;
       margin-right: 50px;
+  }
+
+  @media screen and (max-height: 760px) {
+    .menu {height: 750px;}
   }
