--- a/src/app/professional-projects-section/professional-projects-section.component.css
+++ b/src/app/professional-projects-section/professional-projects-section.component.css
@@ -1,3 +1,8 @@
+.container{
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
 h1{
     font-family: 'Oswald', sans-serif;
     font-size: 42px;
