--- a/src/app/professional-projects-section/professional-projects-section.component.html
+++ b/src/app/professional-projects-section/professional-projects-section.component.html
@@ -1,4 +1,5 @@
-
+<div class="container">
+    
 <h1>Projects</h1>
 <h3 class="prof">Professional Projects</h3>
 
@@ -158,4 +159,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
