--- a/src/app/skills-section/skills-section.component.html
+++ b/src/app/skills-section/skills-section.component.html
@@ -1,4 +1,5 @@
-
+<div class="container">
+    
     <h1>Skills</h1>
 <div class="row">
     <div class="col-md-6 wrapper">
@@ -165,3 +166,5 @@
     </div>
 </div>
 
+
+</div>
